<resources>
    <string name="app_name">BIUlive</string>
    <!--
    <string name="action_settings">Settings</string>
    <string name="schedule">Schedule</string>
    <string name="map">Map</string>
    <string name="messages">Messages</string>
    <string name="library">Library</string>
    <string name="grades">Grades</string>
    <string name="personal">Personal</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="contacts">Contacts</string>
    <string name="facebook">Facebook</string>
    <string name="tests">Tests</string>
    <string name="userId">שם משתמש</string>
    <string name="password">סיסמא</string>
    <string name="action_login_button">התחבר</string>
    <string name="action_sign_in_short">action_sign_in_short</string>
-->
    <string name="title_activity_map">Map</string>
    <string name="title_activity_grades">GradesActivity</string>
    <string name="title_activity_facebook">FacebookActivity</string>
    <string name="title_activity_tests">TestsActivity</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="title_activity_library">LibraryActivity</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="title_activity_login">LoginActivity</string>


    <string name="title_activity_menu">Menu</string>


    <string name="action_settings">הגדרות</string>
    <string name="schedule">מערכת שעות</string>
    <string name="map">מפה</string>
    <string name="messages">הודעות</string>
    <string name="library">ספריה</string>
    <string name="grades">ציונים</string>
    <string name="personal">אזור אישי</string>
    <string name="settings">הגדרות</string>
    <string name="feedback">Feedback</string>
    <string name="contacts">אנשי קשר</string>
    <string name="facebook">Facebook</string>
    <string name="tests">לוח מבחנים</string>
    <string name="userId">שם משתמש</string>
    <string name="password">סיסמא</string>
    <string name="action_login_button">התחבר</string>
    <string name="Your_average">הממוצע שלך:</string>
    <string name="courseName">שם הקורס:</string>
    <string name="courseNumber">מספר הקורס:</string>
    <string name="courseDay">יום הקורס:</string>
    <string name="courseHours">שעות הקורס:</string>
    <string name="accountCharge">מצב החשבון שלך:</string>
    <string name="accountBalance">יתרה לתשלום:</string>
    <string name="accountCredit">:זיכויים</string>
    <string name="gradeComp_type">מטלה מסוג </string>
    <string name="gradeComp_moed">מועד</string>
    <string name="gradeComp_date">תאריך ביצוע</string>
    <string name="gradeComp_precent">אחוז</string>
    <string name="gradeComp_grade">ציון</string>
    <string name="gradeComp">מרכיבי הציון</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
