<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center">
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="327dp" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:layout_centerHorizontal="true">
    <TableRow android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tests_button"
            android:contentDescription="@string/tests"
            android:text="@string/tests"
            android:drawableTop="@drawable/tests"
            android:layout_column="0"
            android:layout_gravity="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/grades_button"
            android:contentDescription="@string/grades"
            android:text="@string/grades"
            android:drawableTop="@drawable/grades"
            android:layout_column="1"
            android:elegantTextHeight="true"
            android:layout_gravity="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/library_button"
            android:contentDescription="@string/library"
            android:text="@string/library"
            android:drawableTop="@drawable/library"
            android:layout_below="@+id/messages_button"
            android:layout_toRightOf="@+id/grades_button"
            android:layout_column="2"
            android:layout_gravity="center" />
    </TableRow>
    <TableRow android:layout_weight="1"
        android:layout_height="0dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/map_button"
            android:contentDescription="@string/map"
            android:text="@string/map"
            android:drawableTop="@drawable/map"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/personal_button"
            android:layout_toLeftOf="@+id/messages_button"
            android:layout_toStartOf="@+id/messages_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/schedule_button"
            android:contentDescription="@string/schedule"
            android:text="@string/schedule"
            android:drawableTop="@drawable/schedule"
            android:layout_alignRight="@+id/tests_button"
            android:layout_alignEnd="@+id/tests_button" />



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/messages_button"
            android:contentDescription="@string/messages"
            android:text="@string/messages"
            android:drawableTop="@drawable/messages"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/contacts_button" />
    </TableRow>
    <TableRow android:layout_weight="1"
        android:layout_height="0dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contacts_button"
            android:contentDescription="@string/contacts"
            android:text="@string/contacts"
            android:drawableTop="@drawable/contacts"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/personal_button"
            android:layout_toLeftOf="@+id/messages_button"
            android:layout_toStartOf="@+id/messages_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/personal_button"
            android:contentDescription="@string/personal"
            android:text="@string/personal"
            android:drawableTop="@drawable/personal"
            android:layout_alignRight="@+id/tests_button"
            android:layout_alignEnd="@+id/tests_button" />



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/facebook_button"
            android:contentDescription="@string/facebook"
            android:text="@string/facebook"
            android:drawableTop="@drawable/facebook"/>
    </TableRow>
</TableLayout>
</LinearLayout>