<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.netanel.biulive.PersonalActivity"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="325dp"
        android:layout_height="match_parent"
        android:background="@drawable/abc_popup_background_mtrl_mult"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/balance"
                android:layout_weight="2"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accountBalance"
                android:id="@+id/balanceString"
                android:layout_weight="1"
                android:textIsSelectable="false"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/credit"
                android:layout_weight="2"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accountCredit"
                android:id="@+id/creditString"
                android:layout_weight="1"
                android:textSize="25sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_gravity="right"
            android:src="@android:drawable/bottom_bar"
            android:layout_weight="0.31" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/charge"
                android:layout_weight="2"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accountCharge"
                android:id="@+id/chargeString"
                android:layout_weight="1"
                android:textSize="25sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
